# LoopieEngine-Scripting

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Loopie/: CMakeLists.txt
Loopie/src/Loopie/Components/: Camera.cpp  Camera.h  Component.cpp  Component.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  ScriptClass.cpp  ScriptClass.h  Transform.cpp  Transform.h
Loopie/src/Loopie/Core/: Application.cpp  Application.h  IIdentificable.h  Identificable.h  InputEventManager.cpp  InputEventManager.h  Window.cpp  Window.h
Loopie/src/Loopie/Events/: EventTypes.h
Loopie/src/Loopie/Files/: DirectoryManager.cpp  DirectoryManager.h  Json.cpp  Json.h  MeshImporter.cpp  MeshImporter.h  OrbitalCamera.cpp  OrbitalCamera.h
Loopie/src/Loopie/ImGui/: ImGuiManager.cpp
Loopie/src/Loopie/Importers/: MeshImporter.cpp  (+4 more)
LoopieCompiler/: CMakeLists.txt  LoopieCompiler.csproj  ScriptCompiler.cs
LoopieEditor/: CMakeLists.txt
LoopieEditor/assets/: imgui.ini
LoopieEditor/assets/models/Primitives/: cube.fbx  cylinder.fbx  sphere.fbx
LoopieEditor/assets/models/primitives/: plane.fbx
LoopieEditor/assets/scripts/: DefaultScript.cs
LoopieEditor/assets/shaders/: CorrectShader.shader  DefaultShader.shader  LineShader.shader
LoopieEditor/src/: CreateProjectModule.cpp  CreateProjectModule.h  EditorApplication.cpp  EditorModule.cpp  EditorModule.h
LoopieEditor/src/Editor/: EditorApplication.cpp
LoopieEditor/src/Editor/ImGuiHelpers/: ImGuiHelpers.cpp
LoopieEditor/src/Editor/Interfaces/ProjectSetup/: ProjectSetupInterface.cpp  ProjectSetupInterface.h
LoopieEditor/src/Editor/Interfaces/Workspace/: AssetsExplorerInterface.cpp  AssetsExplorerInterface.h  ConsoleInterface.cpp  ConsoleInterface.h  EditorMenuInterface.cpp  EditorMenuInterface.h  HierarchyInterface.h  InspectorInterface.cpp  InspectorInterface.h  SceneInterface.cpp  TextEditorInterface.cpp  TextEditorInterface.h  TopBarInterface.cpp  TopBarInterface.h
LoopieEditor/src/Editor/Modules/: EditorModule.cpp  EditorModule.h  ProjectSetupModule.h
LoopieEditor/src/Editor/Others/: OrbitalCamera.cpp  OrbitalCamera.h
LoopieEditor/src/Interfaces/: Interface.h  ProjectSetupInterface.cpp  ProjectSetupInterface.h
LoopieEditor/src/Interfaces/Editor/: AssetsExplorerInterface.cpp  AssetsExplorerInterface.h  EditorMenuInterface.cpp  EditorMenuInterface.h  HierarchyInterface.cpp  HierarchyInterface.h  InspectorInterface.cpp  SceneInterface.cpp
LoopieEditor/src/Others/: OrbitalCamera.cpp  OrbitalCamera.h
LoopieScripting/: CMakeLists.txt  Class1.cs  Component.cs  Entity.cs  Input.cs  InternalCalls.cs  LoopieScripting.csproj  Main.cs  Time.cs
LoopieScripting/Components/: Component.cs  Transform.cs
LoopieScripting/VariableTypes/: KeyCode.cs  Vector2.cs  Vector3.cs  Vector4.cs
enc_temp_folder/67c138bb5a724fac915b353ce51687a/: Tank.cs
enc_temp_folder/6da3f06dca71ec68e4ad6deb92dcfdf7/: Main.cs
enc_temp_folder/d79177f1be6dea5bbb2803d82c25fc/: Projectile.cs
(+45 files in other folders)
